<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.XacNhanChuyenKhoanActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:title="@string/titlexacnhanchuyenkhoan"
        app:titleTextColor="@color/mautrang"
        android:background="@color/mauhong"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xacnhanthanhtoannhusau"
                android:textColor="@color/mauden"
                android:textStyle="bold"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text2xacnhanck"
                android:textColor="@color/mauden"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/madonhang"
                android:textColor="@color/mauden"/>
            <EditText
                android:id="@+id/edMaDH"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:enabled="false"
                android:text="56"
                android:textColor="@color/mauden"
                android:padding="7dp"
                android:background="@drawable/custom_edittext_vienxam_nenxam"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ngaychuyenkhoan"
                android:textColor="@color/mauden"/>
            <TextView
                android:id="@+id/edNgayCK"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="17/07/2020"
                android:gravity="center|left"
                android:textSize="14sp"
                android:textColor="@color/mauden"
                android:padding="6dp"
                android:drawableRight="@drawable/ic_edit_black_24dp"
                android:background="@drawable/custom_edittext_vienxam_nentransparen"/>
             <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nganhangchuyenkhoan"
                android:textColor="@color/mauden"/>
            <EditText
                android:id="@+id/edNganHangCK"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/mauden"
                android:padding="7dp"
                android:background="@drawable/custom_edittext_vienxam_nentransparen"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sotaikhoannganhangchuyen"
                android:textColor="@color/mauden"/>
            <EditText
                android:id="@+id/edSoTKNganHangChuyen"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/mauden"
                android:padding="7dp"
                android:textSize="14sp"
                android:hint="@string/edsotaikhoannganhangchuyen"
                android:background="@drawable/custom_edittext_vienxam_nentransparen"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nganhangnhan"
                android:textColor="@color/mauden"/>
            <EditText
                android:id="@+id/edNganHangNhan"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textSize="14sp"
                android:text="@string/nganhangacb"
                android:textColor="@color/mauden"
                android:padding="7dp"
                android:background="@drawable/custom_edittext_vienxam_nenxam"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sotaikhoannganhangnhan"
                android:textColor="@color/mauden"/>
            <EditText
                android:id="@+id/edSTKNhan"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="0181003531707"
                android:textSize="14sp"
                android:textColor="@color/mauden"
                android:padding="7dp"
                android:background="@drawable/custom_edittext_vienxam_nenxam"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sotienchuyen"
                android:textColor="@color/mauden"/>
            <EditText
                android:id="@+id/edSoTienChuyen"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/mauden"
                android:hint="@string/sotienchuyen"
                android:textSize="14sp"
                android:padding="7dp"
                android:background="@drawable/custom_edittext_vienxam_nentransparen"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ghichu"
                android:textColor="@color/mauden"/>
            <EditText
                android:id="@+id/edGhiChu"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/mauden"
                android:padding="7dp"
                android:gravity="top"
                android:textSize="14sp"
                android:lines="4"
                android:hint="@string/toidaghichuchuyenkhoan"
                android:background="@drawable/custom_edittext_vienxam_nentransparen"/>

            <ImageView
                android:id="@+id/imgAnhChiTiet"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:scaleType="fitXY"
                android:src="@drawable/noimage"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/themanhchitiet"
                android:textColor="@color/mauden"/>

            <Button
                android:id="@+id/btnXacNhanThanhToan"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_height="40dp"
                android:background="@drawable/custom_border_button"
                android:text="@string/xacnhanthanhtoan"
                android:textColor="@color/mautrang"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>