<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ChiTietChuyenKhoanActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/mauhong"
        app:title="Chi tiết chuyển khoản"
        app:titleTextColor="@color/mautrang"/>

    <ScrollView
        android:id="@+id/layoutChiTiet"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:nestedScrollingEnabled="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtTrangThaiDH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Đơn hàng chờ xác nhận chuyển khoản"
                android:textStyle="italic"
                android:textColor="@color/mauhong"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/madonhang"
                android:textColor="@color/mauden"/>
            <TextView
                android:id="@+id/txtMaDH"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:enabled="false"
                android:text="56"
                android:textColor="@color/mauden"
                android:padding="7dp"
                android:background="@drawable/custom_edittext_vienxam_nenxam"/>


            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ngaychuyenkhoan"
                android:textColor="@color/mauden"/>
            <TextView
                android:id="@+id/txtNgayCK"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="17/07/2020"
                android:gravity="center|left"
                android:textSize="14sp"
                android:textColor="@color/mauden"
                android:padding="7dp"
                android:background="@drawable/custom_edittext_vienxam_nenxam"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nganhangchuyenkhoan"
                android:textColor="@color/mauden"/>
            <TextView
                android:id="@+id/txtNganHangCK"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="ACB"
                android:textColor="@color/mauden"
                android:padding="7dp"
                android:background="@drawable/custom_edittext_vienxam_nenxam"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edsotaikhoannganhangchuyen"
                android:textColor="@color/mauden"/>
            <TextView
                android:id="@+id/txtSTKCK"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/mauden"
                android:padding="7dp"
                android:textSize="14sp"
                android:text="01532245"
                android:background="@drawable/custom_edittext_vienxam_nenxam"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nganhangnhan"
                android:textColor="@color/mauden"/>
            <TextView
                android:id="@+id/txtNganHangNhan"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textSize="14sp"
                android:text="@string/nganhangacb"
                android:textColor="@color/mauden"
                android:padding="7dp"
                android:background="@drawable/custom_edittext_vienxam_nenxam"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sotaikhoannganhangnhan"
                android:textColor="@color/mauden"/>
            <TextView
                android:id="@+id/txtSTKNhan"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="0181003531707"
                android:textSize="14sp"
                android:textColor="@color/mauden"
                android:padding="7dp"
                android:background="@drawable/custom_edittext_vienxam_nenxam"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sotienchuyen"
                android:textColor="@color/mauden"/>
            <TextView
                android:id="@+id/txtSoTienChuyen"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/mauden"
                android:text="1.500.000đ"
                android:textSize="14sp"
                android:padding="7dp"
                android:background="@drawable/custom_edittext_vienxam_nenxam"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ghichu"
                android:textColor="@color/mauden"/>
            <TextView
                android:id="@+id/txtGhiChu"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/mauden"
                android:padding="7dp"
                android:gravity="top"
                android:textSize="14sp"
                android:lines="4"
                android:text="Chuyển khoản đơn hàng 56"
                android:background="@drawable/custom_edittext_vienxam_nenxam"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ảnh chi tiết"
                android:textColor="@color/mauden"
                android:textStyle="italic"/>
            <ImageView
                android:id="@+id/imgAnhChiTiet"
                android:layout_gravity="center"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_marginTop="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/noimage"/>

            <Button
                android:id="@+id/btnXacNhanCK"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_height="40dp"
                android:background="@drawable/custom_border_button"
                android:text="Xác nhận chuyển khoản"
                android:textColor="@color/mautrang"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>